fixed resume on mobile

--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -37,3 +37,7 @@ a {
     text-decoration:none;
     color: inherit;
 }
+
+.about-section-mobile {
+    width: 90%;
+}
